# 20180225SWIFTOpen

./: swift package 使用 2018 回顾  在linux 使用swift开发中 苹果的swift 到底开源了哪些  软件无线电-调制解调
ARSwift2/ARSwift2/: AnimationControl.swift  CameraVCControl.swift  CutomViewImage.swift  DispatchRunLoop.swift  ImageDrawControl.swift  ModalVCControl.swift  MovieVCControl.swift  VideoEditControl.swift  ViewController.swift
ARSwift2/ARSwift2.xcodeproj/: project.pbxproj
PackageManager Swift on linux/: CMakeLists.txt  Swift module.modulemap  规范  swift PackageManager 依赖git的使用 linux机子先安装git module  swift package init --type  swift package init --type system-module  使用 c 库 swift linux ubuntu  使用自己的c 代码 制作 c module  为swift 提供使用 linux ubuntu
SwiftBasicMac/SwiftBasicMac/: Basic_SWF.swift  CFramWork.c  CFramWork.h  CPointer_SWF.swift  FanXing_SWF.swift  Package.swift  Person.swift  Redis_Handler.swift  SwiftBasicMac-Bridging-Header.h  hiredis-bridge.c  hiredis-bridge.h  main.swift
SwiftBasicMac/SwiftBasicMac.xcodeproj/: project.pbxproj
clion 对swift支持 ubuntu /: Swift PackageManager 标准4.0  Swift-redis  swift 编译链 The Swift Linux Port  在linux 使用swift开发中 苹果的swift 到底开源了哪些  编译Swift Ubuntu 缺少
clion 对swift支持 ubuntu /Swift_Linux/: CMakeLists.txt  Package.swift
clion 对swift支持 ubuntu /Swift_Linux/.build/: build.db  debug.yaml
clion 对swift支持 ubuntu /Swift_Linux/Sources/: CFramWork.c  CFramWork.h  CPointer_SWF.swift  RunLoop_SWF.swift  TestLinux.swift  main.swift  swift_build_linux.sh
clion 对swift支持 ubuntu /debug/: Swift_Linux.swiftmodule
clion 对swift支持 ubuntu /debug/Swift_Linux.build/: Guard.d  (+33 more)
(+62 files in other folders)
